k8s/lldap/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  type: ClusterIP
  ports:
    - name: ldap
      port: 3890
      targetPort: ldap
    - name: web
      port: 17170
      targetPort: web
  selector:
    app: lldap
