k8s/lldap/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lldap
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ldap.kevingomez.fr`)
      services:
        - kind: Service
          name: lldap
          port: 17170
  tls:
    secretName: lldap-cert
